--- a/Mission06_Tuinei/appsettings.json
+++ b/Mission06_Tuinei/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FirstConnection": "Data Source = MovieForms.sqlite"
+    "FirstConnection": "Data Source = JoelHiltonMovieCollection.sqlite"
   }
 }
